changed some comments

--- a/maop_steady-state.ipynb
+++ b/maop_steady-state.ipynb
@@ -19,13 +19,13 @@
    "execution_count": 19,
    "outputs": [],
    "source": [
-    "'''Initiate parameters'''\n",
-    "gOP=1*2*np.pi   #Optical pumping rate\n",
-    "W=0.01*gOP          # coupling strength in terms of the Rabi frequency\n",
-    "w_L=1*gOP*2e2         #ethalon Larmor frequency\n",
-    "gL=2*w_L          #cavity line width\n",
-    "gT=1.0*gOP          # thermal relaxation rate\n",
-    "delta=np.linspace(-4*w_L,4*w_L,320)# microwave detuning"
+    "# Parameters\n",
+    "gOP = 1*2*np.pi   #Optical pumping rate\n",
+    "W = 0.01*gOP          # coupling strength in terms of the Rabi frequency\n",
+    "w_L = 1*gOP*2e2         #ethalon Larmor frequency\n",
+    "gL = 2*w_L          #cavity line width\n",
+    "gT = 1.0*gOP          # thermal relaxation rate\n",
+    "delta = np.linspace(-4*w_L,4*w_L,320)# microwave detuning"
    ],
    "metadata": {
     "collapsed": false
@@ -51,7 +51,7 @@
     "psi21 = states[6]  #(2,+1)ground state\n",
     "psi22 = states[7]  #(2,+2)ground state\n",
     "\n",
-    "'''projectors onto the basis states'''\n",
+    "# Projector operators onto the basis states\n",
     "P = []\n",
     "for psi in states:\n",
     "    P.append(ket2dm(psi))"
@@ -69,12 +69,12 @@
     "\n",
     "c_ops = []  #list with collapse operators\n",
     "\n",
-    "'''Optical pumping relaxation'''\n",
+    "# Optical pumping relaxation\n",
     "for psi1 in states[0:3]:\n",
     "    for psi2 in states[3:]:\n",
     "        c_ops.append(np.sqrt(gOP) * psi1 * psi2.dag())\n",
     "\n",
-    "'''Thermal relaxation between the Zeeman states'''\n",
+    "# Thermal relaxation between the Zeeman states\n",
     "for i in np.arange(8):\n",
     "    for j in np.arange(8):\n",
     "        if i != j:\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "# Hamiltonian\n",
@@ -112,8 +112,6 @@
     "    if wL==0:\n",
     "        return 0*S_o*np.sqrt(L(np.array([-3,-1,-1,1,1,3])*wL,gL))\n",
     "    return S_o*W_ort/wL*np.sqrt(L(np.array([-3,-1,-1,1,1,3])*wL,gL))\n",
-    "\n",
-    "\n",
     "\n",
     "\"interaction part of the Hamiltonian as a function of Larmor frequency\"\n",
     "def V(W_par,W_ort):\n",
