changed some comments

--- a/maop_steady-state.ipynb
+++ b/maop_steady-state.ipynb
@@ -208,7 +208,7 @@
     "fig, ax = plt.subplots()\n",
     "ax.plot(delta/w_L, rho)\n",
     "ax.set_xlabel(r'$\\Delta_{\\mu}/\\omega_{L}$',fontsize=12)\n",
-    "ax.set_ylabel('Signal',fontsize=12)\n",
+    "ax.set_ylabel('Population',fontsize=12)\n",
     "ax.legend(loc=0)"
    ],
    "metadata": {
@@ -226,13 +226,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "outputs": [
     {
      "data": {
       "text/plain": "Text(0, 0.5, 'Transmission')"
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -254,7 +254,7 @@
     }
    ],
    "source": [
-    "#fractions of atoms in the velocity classes resonant with different transitions\n",
+    "# Fractions of atoms in the velocity classes resonant with different transitions\n",
     "c=2.99792458e8 # speed of light in m/s\n",
     "f=384.230484468562e12-302.073888e6# optical transition frequency in Hz\n",
     "kB=1.380650324e-23# Blotzmann constant in  J/K\n",
@@ -268,22 +268,22 @@
     "N1=N0*np.exp(-((72.2e6*c)/(f*v))**2)#ensemble fraction in F'=1\n",
     "N2=N0*np.exp(-((72.2e6+156.9e6)*c/(f*v))**2)#ensemble fraction in F'=2\n",
     "\n",
-    "#total sigma+ absorption as a function of sublevel populations\n",
+    "# Total sigma+ absorption as a function of sublevel populations\n",
     "def Asp(P_1,P0,P1):\n",
     "    A=P_1*(N0*1./6+N1*5./24+N2*1./24)+P0*(N0*0+N1*5./24+N2/8)+P1*N2/4\n",
     "    return A\n",
     "\n",
-    "#same for pi\n",
+    "# Same for pi\n",
     "def Api(P_1,P0,P1):\n",
     "    A=P_1*(N0*0+N1*5./24+N2*1./8)+P0*(N0/6+N1*0+N2/6)+P1*(N0*0+N1*5./24+N2*1./8)\n",
     "    return A\n",
     "\n",
-    "#same for sigma-\n",
+    "# Same for sigma-\n",
     "def Asm(P_1,P0,P1):\n",
     "    A=P1*(N0*1./6+N1*5./24+N2*1./24)+P0*(N0*0+N1*5./24+N2/8)+P_1*N2/4\n",
     "    return A\n",
     "\n",
-    "# total absorption for light whose is split between polarization components:  π : 0.5,  σ+ :0.25,  σ− :0.25\n",
+    "# Total absorption for light whose is split between polarization components:  π : 0.5,  σ+ :0.25,  σ− :0.25\n",
     "def A(P_1,P0,P1):\n",
     "    return 0.5*Api(P_1,P0,P1)+0.25*Asp(P_1,P0,P1)+0.25*Asm(P_1,P0,P1)\n",
     "\n",
@@ -306,15 +306,6 @@
     "ax.set_ylabel(r'Transmission',fontsize=12)\n",
     "#ax.legend(loc=0)"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
