--- a/maop_steady-state.ipynb
+++ b/maop_steady-state.ipynb
@@ -5,10 +5,9 @@
    "execution_count": 18,
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "from qutip import*"
+    "import numpy as np\n",
+    "from qutip import *"
    ],
    "metadata": {
     "collapsed": false
@@ -20,11 +19,11 @@
    "outputs": [],
    "source": [
     "# Parameters\n",
-    "gOP = 1*2*np.pi   #Optical pumping rate\n",
-    "W = 0.01*gOP          # coupling strength in terms of the Rabi frequency\n",
-    "w_L = 1*gOP*2e2         #ethalon Larmor frequency\n",
-    "gL = 2*w_L          #cavity line width\n",
-    "gT = 1.0*gOP          # thermal relaxation rate\n",
+    "gOP = 2 * np.pi # Optical pumping rate\n",
+    "W = 0.01 * gOP # Coupling strength in terms of the Rabi frequency\n",
+    "w_L = gOP * 2e2 # Ethalon Larmor frequency\n",
+    "gL = 2 * w_L  # Cavity line width\n",
+    "gT = 1.0 * gOP # Thermal relaxation rate\n",
     "delta = np.linspace(-4*w_L,4*w_L,320)# microwave detuning"
    ],
    "metadata": {
@@ -95,10 +94,10 @@
     "S_o=W*np.array([0.5*np.sqrt(3),  0.25*np.sqrt(2), 0.25*np.sqrt(6), 0.25*np.sqrt(6), 0.25*np.sqrt(2),  0.5*np.sqrt(3)])# Rabi frequencies for orthogonal transition\n",
     "S_l=W*np.array([0.5*np.sqrt(3), 1, 0.5*np.sqrt(3)])# Rabi frequencies for longitudinal transition\n",
     "\n",
-    "#add cavity line-width\n",
+    "# Add the cavity line-width\n",
     "def L(f,g):\n",
     "    if g==0:\n",
-    "        return 1\n",
+    "        return 1 # Condition g=0 corresponds to the case when there is no cavity.\n",
     "    return g**2/(g**2+f**2)\n",
     "\n",
     "def Sl(W_par,W_ort):\n",
@@ -163,14 +162,15 @@
     "ss1=[] # Steady-state population in F=1, mF=1\n",
     "for d in delta:\n",
     "    ss=steadystate(H(d,W_par*w_L,W_ort*w_L), c_ops, drop_tol=1e-10) #steady state\n",
-    "    ss_1.append(expect(P[0],ss))#steady-state populations of psi1\n",
-    "    ss0.append(expect(P[1],ss))#steady-state populations of psi2\n",
-    "    ss1.append(expect(P[2],ss))#steady-state populations of psi3\n",
-    "##convert to arrays\n",
+    "    ss_1.append(expect(P[0],ss)) # Steady-state populations of psi1\n",
+    "    ss0.append(expect(P[1],ss)) # Steady-state populations of psi2\n",
+    "    ss1.append(expect(P[2],ss)) # Steady-state populations of psi3\n",
+    "\n",
+    "# Convert to arrays\n",
     "ss_1=np.array(ss_1)\n",
     "ss0=np.array(ss0)\n",
     "ss1=np.array(ss1)\n",
-    "rho=ss_1+ss0+ss1\n"
+    "rho=ss_1+ss0+ss1 # Total population of the F=1 ground state"
    ],
    "metadata": {
     "collapsed": false
@@ -226,6 +226,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Fractions of atoms in the velocity classes resonant with different transitions\n",
+    "c = 2.99792458e8 # speed of light in m/s\n",
+    "f = 384.230484468562e12-302.073888e6# optical transition frequency in Hz\n",
+    "kB = 1.380650324e-23# Blotzmann constant in  J/K\n",
+    "T = 300# room temperature in K\n",
+    "m = 87*1.6605387313e-27# 87Rb mass in kg\n",
+    "v = np.sqrt(2*kB*T/m) # most probable thermal speed in m/s\n",
+    "\n",
+    "N0 = 1. #ensemble fraction in  F'=0\n",
+    "N1 = N0*np.exp(-((72.2e6*c)/(f*v))**2)#ensemble fraction in F'=1\n",
+    "N2 = N0*np.exp(-((72.2e6+156.9e6)*c/(f*v))**2)#ensemble fraction in F'=2\n",
+    "\n",
+    "# Total sigma+ absorption as a function of sublevel populations\n",
+    "def Asp(P_1,P0,P1):\n",
+    "    A=P_1*(N0*1./6+N1*5./24+N2*1./24)+P0*(N0*0+N1*5./24+N2/8)+P1*N2/4\n",
+    "    return A\n",
+    "\n",
+    "# Same for pi\n",
+    "def Api(P_1,P0,P1):\n",
+    "    A=P_1*(N0*0+N1*5./24+N2*1./8)+P0*(N0/6+N1*0+N2/6)+P1*(N0*0+N1*5./24+N2*1./8)\n",
+    "    return A\n",
+    "\n",
+    "# Same for sigma-\n",
+    "def Asm(P_1,P0,P1):\n",
+    "    A=P1*(N0*1./6+N1*5./24+N2*1./24)+P0*(N0*0+N1*5./24+N2/8)+P_1*N2/4\n",
+    "    return A\n",
+    "\n",
+    "# Total absorption for light whose is split between polarization components:  π : 0.5,  σ+ :0.25,  σ− :0.25\n",
+    "def A(P_1,P0,P1):\n",
+    "    return 0.5*Api(P_1,P0,P1)+0.25*Asp(P_1,P0,P1)+0.25*Asm(P_1,P0,P1)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Plot tansmission for sigma+ polarization\n",
+    "alpha_p=Asp(ss_1,ss0,ss1)\n",
+    "Tsigma=1-alpha_p\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(delta/w_L, Tsigma,label=r'$-1$')\n",
+    "ax.set_xlabel(r'$\\delta/w_L$',fontsize=12)\n",
+    "ax.set_ylabel(r'Transmission',fontsize=12)\n",
+    "ax.set_title(r'$0.25\\sigma^{+}$')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "outputs": [
     {
@@ -254,57 +312,13 @@
     }
    ],
    "source": [
-    "# Fractions of atoms in the velocity classes resonant with different transitions\n",
-    "c=2.99792458e8 # speed of light in m/s\n",
-    "f=384.230484468562e12-302.073888e6# optical transition frequency in Hz\n",
-    "kB=1.380650324e-23# Blotzmann constant in  J/K\n",
-    "T=300# room temperature in K\n",
-    "m=87*1.6605387313e-27# 87Rb mass in kg\n",
-    "v=np.sqrt(2*kB*T/m) # most probable thermal speed in m/s\n",
-    "\n",
-    "N0=1. #ensemble fraction in  F'=0\n",
-    "# N1=0.945 #F'=1\n",
-    "# N2=0.566# F'=2\n",
-    "N1=N0*np.exp(-((72.2e6*c)/(f*v))**2)#ensemble fraction in F'=1\n",
-    "N2=N0*np.exp(-((72.2e6+156.9e6)*c/(f*v))**2)#ensemble fraction in F'=2\n",
-    "\n",
-    "# Total sigma+ absorption as a function of sublevel populations\n",
-    "def Asp(P_1,P0,P1):\n",
-    "    A=P_1*(N0*1./6+N1*5./24+N2*1./24)+P0*(N0*0+N1*5./24+N2/8)+P1*N2/4\n",
-    "    return A\n",
-    "\n",
-    "# Same for pi\n",
-    "def Api(P_1,P0,P1):\n",
-    "    A=P_1*(N0*0+N1*5./24+N2*1./8)+P0*(N0/6+N1*0+N2/6)+P1*(N0*0+N1*5./24+N2*1./8)\n",
-    "    return A\n",
-    "\n",
-    "# Same for sigma-\n",
-    "def Asm(P_1,P0,P1):\n",
-    "    A=P1*(N0*1./6+N1*5./24+N2*1./24)+P0*(N0*0+N1*5./24+N2/8)+P_1*N2/4\n",
-    "    return A\n",
-    "\n",
-    "# Total absorption for light whose is split between polarization components:  π : 0.5,  σ+ :0.25,  σ− :0.25\n",
-    "def A(P_1,P0,P1):\n",
-    "    return 0.5*Api(P_1,P0,P1)+0.25*Asp(P_1,P0,P1)+0.25*Asm(P_1,P0,P1)\n",
-    "\n",
-    "'''Tansmission for sigma+'''\n",
-    "alpha_p=Asp(ss_1,ss0,ss1)\n",
-    "Tsigma=1-alpha_p\n",
-    "fig, ax = plt.subplots()\n",
-    "ax.plot(delta/w_L, Tsigma,label=r'$-1$')\n",
-    "ax.set_xlabel(r'$\\delta/w_L$',fontsize=12)\n",
-    "ax.set_ylabel(r'Transmission',fontsize=12)\n",
-    "#ax.legend(loc=0)\n",
-    "ax.set_title(r'$0.25\\sigma^{+}$')\n",
-    "\n",
-    "'''Transmission for the mixed polarization'''\n",
+    "# Plot transmission for the mixed polarization\n",
     "alpha_mixed=A(ss_1,ss0,ss1)\n",
     "Tmixed=1-alpha_mixed\n",
     "fig, ax = plt.subplots()\n",
     "ax.plot(delta/w_L,Tmixed,label=r'$-1$')\n",
     "ax.set_xlabel(r'$\\delta/w_L$',fontsize=12)\n",
-    "ax.set_ylabel(r'Transmission',fontsize=12)\n",
-    "#ax.legend(loc=0)"
+    "ax.set_ylabel(r'Transmission',fontsize=12)"
    ],
    "metadata": {
     "collapsed": false
