--- a/maop_steady-state.ipynb
+++ b/maop_steady-state.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -10,7 +10,10 @@
     "from qutip import *"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
@@ -21,10 +24,10 @@
     "# Parameters\n",
     "gOP = 2 * np.pi # Optical pumping rate\n",
     "W = 0.01 * gOP # Coupling strength in terms of the Rabi frequency\n",
-    "w_L = gOP * 2e2 # Ethalon Larmor frequency\n",
-    "gL = 2 * w_L  # Cavity line width\n",
+    "w_L = gOP * 2e2 # Etalon Larmor frequency\n",
+    "gL = 2 * w_L  # Cavity linewidth\n",
     "gT = 1.0 * gOP # Thermal relaxation rate\n",
-    "delta = np.linspace(-4*w_L,4*w_L,320)# microwave detuning"
+    "delta = np.linspace(-4*w_L,4*w_L,320)# Microwave detuning"
    ],
    "metadata": {
     "collapsed": false
@@ -35,20 +38,20 @@
    "execution_count": 20,
    "outputs": [],
    "source": [
-    "# Initialize quantum system\n",
+    "# Initialize the quantum system\n",
     "\n",
     "states = []  # list with the basis states\n",
     "for i in np.arange(8):\n",
     "    states.append(basis(8, i))\n",
     "\n",
-    "psi1_1 = states[0]  #(1,-1) ground state\n",
-    "psi10 = states[1]  #(1,0) ground state\n",
-    "psi11 = states[2]  #(1,+1)ground state\n",
-    "psi2_2 = states[3]  #(2,-2)ground state\n",
-    "psi2_1 = states[4]  #(2,-1)ground state\n",
-    "psi20 = states[5]  #(2,0)ground state\n",
-    "psi21 = states[6]  #(2,+1)ground state\n",
-    "psi22 = states[7]  #(2,+2)ground state\n",
+    "psi1_1 = states[0] # (1,-1) ground state\n",
+    "psi10 = states[1] # (1,0) ground state\n",
+    "psi11 = states[2] # (1,+1)ground state\n",
+    "psi2_2 = states[3] # (2,-2)ground state\n",
+    "psi2_1 = states[4] # (2,-1)ground state\n",
+    "psi20 = states[5] # (2,0)ground state\n",
+    "psi21 = states[6] # (2,+1)ground state\n",
+    "psi22 = states[7] # (2,+2)ground state\n",
     "\n",
     "# Projector operators onto the basis states\n",
     "P = []\n",
@@ -66,7 +69,7 @@
    "source": [
     "# Collapse operators\n",
     "\n",
-    "c_ops = []  #list with collapse operators\n",
+    "c_ops = [] # List with collapse operators\n",
     "\n",
     "# Optical pumping relaxation\n",
     "for psi1 in states[0:3]:\n",
@@ -89,58 +92,57 @@
    "outputs": [],
    "source": [
     "# Hamiltonian\n",
-    "'''Interaction Hamiltonian'''\n",
     "\n",
-    "S_o=W*np.array([0.5*np.sqrt(3),  0.25*np.sqrt(2), 0.25*np.sqrt(6), 0.25*np.sqrt(6), 0.25*np.sqrt(2),  0.5*np.sqrt(3)])# Rabi frequencies for orthogonal transition\n",
-    "S_l=W*np.array([0.5*np.sqrt(3), 1, 0.5*np.sqrt(3)])# Rabi frequencies for longitudinal transition\n",
+    "S_o = W * np.array([0.5*np.sqrt(3),  0.25*np.sqrt(2), 0.25*np.sqrt(6), 0.25*np.sqrt(6), 0.25*np.sqrt(2),  0.5*np.sqrt(3)])# Rabi frequencies for sigma transition\n",
+    "S_l = W * np.array([0.5*np.sqrt(3), 1, 0.5*np.sqrt(3)]) # Rabi frequencies for pi transitions\n",
     "\n",
-    "# Add the cavity line-width\n",
-    "def L(f,g):\n",
-    "    if g==0:\n",
-    "        return 1 # Condition g=0 corresponds to the case when there is no cavity.\n",
+    "def L(f, g):\n",
+    "    \"\"\"Cavity line-width\"\"\"\n",
+    "    if g == 0:\n",
+    "        return 1 # For simplicity, I set this condition fot the case when there is no cavity\n",
     "    return g**2/(g**2+f**2)\n",
     "\n",
-    "def Sl(W_par,W_ort):\n",
-    "    wL=np.sqrt(W_par**2+W_ort**2)\n",
-    "    if wL==0:\n",
-    "        return S_l*np.sqrt(L(np.array([-2,0.0,2])*wL,gL))\n",
-    "    return S_l*W_par/wL*np.sqrt(L(np.array([-2,0.0,2])*wL,gL))\n",
-    "\n",
-    "def So(W_par,W_ort):\n",
-    "    wL=np.sqrt(W_par**2+W_ort**2)\n",
-    "    if wL==0:\n",
+    "def So(W_par, W_ort):\n",
+    "    wL = np.sqrt(W_par**2+W_ort**2)\n",
+    "    if wL == 0:\n",
     "        return 0*S_o*np.sqrt(L(np.array([-3,-1,-1,1,1,3])*wL,gL))\n",
     "    return S_o*W_ort/wL*np.sqrt(L(np.array([-3,-1,-1,1,1,3])*wL,gL))\n",
     "\n",
-    "\"interaction part of the Hamiltonian as a function of Larmor frequency\"\n",
-    "def V(W_par,W_ort):\n",
-    "    V_l=0*qeye(len(states))\n",
-    "    V_o=0*qeye(len(states))\n",
+    "def Sl(W_par, W_ort):\n",
+    "    \"\"\"Pi-transition\"\"\"\n",
+    "    wL = np.sqrt(W_par**2+W_ort**2)\n",
+    "    if wL == 0:\n",
+    "        return S_l * np.sqrt(L(np.array([-2, 0, 2])*wL,gL))\n",
+    "    return S_l * W_par/wL * np.sqrt(L(np.array([-2, 0, 2])*wL,gL))\n",
+    "\n",
+    "def V(W_par, W_ort):\n",
+    "    \"\"\"Interaction part of the Hamiltonian as a function of Larmor frequency\"\"\"\n",
+    "    V_l = 0*qeye(len(states))\n",
+    "    V_o = 0*qeye(len(states))\n",
     "\n",
     "    for i in range(3):\n",
-    "        V_l+=0.5*Sl(W_par,W_ort)[i]*(states[i]*states[i+4].dag())+0.5*Sl(W_par,W_ort)[i]*(states[i]*states[i+4].dag()).dag()#pi transition\n",
-    "        V_o+=0.5*So(W_par,W_ort)[2*i]*(states[i]*states[i+3].dag())+0.5*So(W_par,W_ort)[2*i]*(states[i]*states[i+3].dag()).dag()#sigma-\n",
-    "        V_o+=0.5*So(W_par,W_ort)[2*i+1]*(states[i]*states[i+5].dag())+0.5*So(W_par,W_ort)[2*i+1]*(states[i]*states[i+5].dag()).dag()#sigma+\n",
+    "        V_l += 0.5*Sl(W_par,W_ort)[i]*(states[i]*states[i+4].dag())+0.5*Sl(W_par,W_ort)[i]*(states[i]*states[i+4].dag()).dag()#pi transition\n",
+    "        V_o += 0.5*So(W_par,W_ort)[2*i]*(states[i]*states[i+3].dag())+0.5*So(W_par,W_ort)[2*i]*(states[i]*states[i+3].dag()).dag()#sigma-\n",
+    "        V_o += 0.5*So(W_par,W_ort)[2*i+1]*(states[i]*states[i+5].dag())+0.5*So(W_par,W_ort)[2*i+1]*(states[i]*states[i+5].dag()).dag()#sigma+\n",
     "    return V_o+V_l\n",
     "\n",
-    "\n",
-    "'''Diagonal part of the Hamiltonian as a function of detuning d form the clock transition and the Larmor frequency'''\n",
     "def H_d(d, wL):\n",
-    "    H=0*qeye(len(states))\n",
-    "    H+=(wL+0.5*d)*P[0]\n",
-    "    H+=0.5*d*P[1]\n",
-    "    H+=(-wL+0.5*d)*P[2]\n",
-    "    H+=-(0.5*d+2*wL)*P[3]\n",
-    "    H+=-(0.5*d+wL)*P[4]\n",
-    "    H+=-0.5*d*P[5]\n",
-    "    H+=-(0.5*d-wL)*P[6]\n",
-    "    H+=-(0.5*d-2*wL)*P[7]\n",
+    "    \"\"\"Diagonal part of the Hamiltonian as a function of detuning d form the clock transition and the Larmor frequency\"\"\"\n",
+    "    H = 0*qeye(len(states))\n",
+    "    H += (wL+0.5*d)*P[0]\n",
+    "    H += 0.5*d*P[1]\n",
+    "    H += (-wL+0.5*d)*P[2]\n",
+    "    H += -(0.5*d+2*wL)*P[3]\n",
+    "    H += -(0.5*d+wL)*P[4]\n",
+    "    H += -0.5*d*P[5]\n",
+    "    H += -(0.5*d-wL)*P[6]\n",
+    "    H += -(0.5*d-2*wL)*P[7]\n",
     "    return H\n",
     "\n",
     "'''Total Hamiltonian'''\n",
     "def H(d,W_par,W_ort):\n",
-    "    wL=np.sqrt(W_par**2+W_ort**2)\n",
-    "    H=H_d(d,wL)+V(W_par,W_ort)\n",
+    "    wL = np.sqrt(W_par**2+W_ort**2)\n",
+    "    H = H_d(d,wL)+V(W_par,W_ort)\n",
     "    return H"
    ],
    "metadata": {
@@ -157,20 +159,20 @@
     "W_par = 0 # Parallel component of the microwave field in terms of Rabi frequency\n",
     "W_ort = 1 # Orthogonal component of the microwave field in terms of Rabi frequency\n",
     "\n",
-    "ss_1=[] # Steady-state population in F=1, mF=-1\n",
-    "ss0=[] # Steady-state population in F=1, mF=0\n",
-    "ss1=[] # Steady-state population in F=1, mF=1\n",
+    "ss_1 = [] # Steady-state population in F=1, mF=-1\n",
+    "ss0 = [] # Steady-state population in F=1, mF=0\n",
+    "ss1 = [] # Steady-state population in F=1, mF=1\n",
     "for d in delta:\n",
-    "    ss=steadystate(H(d,W_par*w_L,W_ort*w_L), c_ops, drop_tol=1e-10) #steady state\n",
-    "    ss_1.append(expect(P[0],ss)) # Steady-state populations of psi1\n",
-    "    ss0.append(expect(P[1],ss)) # Steady-state populations of psi2\n",
-    "    ss1.append(expect(P[2],ss)) # Steady-state populations of psi3\n",
+    "    ss = steadystate(H(d,W_par*w_L,W_ort*w_L), c_ops, drop_tol=1e-10) #steady state\n",
+    "    ss_1.append(expect(P[0], ss)) # Steady-state populations of psi1\n",
+    "    ss0.append(expect(P[1], ss)) # Steady-state populations of psi2\n",
+    "    ss1.append(expect(P[2], ss)) # Steady-state populations of psi3\n",
     "\n",
     "# Convert to arrays\n",
-    "ss_1=np.array(ss_1)\n",
-    "ss0=np.array(ss0)\n",
-    "ss1=np.array(ss1)\n",
-    "rho=ss_1+ss0+ss1 # Total population of the F=1 ground state"
+    "ss_1 = np.array(ss_1)\n",
+    "ss0 = np.array(ss0)\n",
+    "ss1 = np.array(ss1)\n",
+    "rho = ss_1+ss0+ss1 # Total population of the F=1 ground state"
    ],
    "metadata": {
     "collapsed": false
@@ -232,32 +234,32 @@
     "# Fractions of atoms in the velocity classes resonant with different transitions\n",
     "c = 2.99792458e8 # speed of light in m/s\n",
     "f = 384.230484468562e12-302.073888e6# optical transition frequency in Hz\n",
-    "kB = 1.380650324e-23# Blotzmann constant in  J/K\n",
+    "kB = 1.380650324e-23# Boltzmann constant in  J/K\n",
     "T = 300# room temperature in K\n",
     "m = 87*1.6605387313e-27# 87Rb mass in kg\n",
     "v = np.sqrt(2*kB*T/m) # most probable thermal speed in m/s\n",
     "\n",
     "N0 = 1. #ensemble fraction in  F'=0\n",
-    "N1 = N0*np.exp(-((72.2e6*c)/(f*v))**2)#ensemble fraction in F'=1\n",
-    "N2 = N0*np.exp(-((72.2e6+156.9e6)*c/(f*v))**2)#ensemble fraction in F'=2\n",
+    "N1 = N0 * np.exp(-((72.2e6*c)/(f*v))**2)#ensemble fraction in F'=1\n",
+    "N2 = N0 * np.exp(-((72.2e6+156.9e6)*c/(f*v))**2)#ensemble fraction in F'=2\n",
     "\n",
     "# Total sigma+ absorption as a function of sublevel populations\n",
-    "def Asp(P_1,P0,P1):\n",
-    "    A=P_1*(N0*1./6+N1*5./24+N2*1./24)+P0*(N0*0+N1*5./24+N2/8)+P1*N2/4\n",
+    "def Asp(P_1, P0, P1):\n",
+    "    A = P_1*(N0*1./6+N1*5./24+N2*1./24)+P0*(N0*0+N1*5./24+N2/8)+P1*N2/4\n",
     "    return A\n",
     "\n",
     "# Same for pi\n",
-    "def Api(P_1,P0,P1):\n",
-    "    A=P_1*(N0*0+N1*5./24+N2*1./8)+P0*(N0/6+N1*0+N2/6)+P1*(N0*0+N1*5./24+N2*1./8)\n",
+    "def Api(P_1, P0, P1):\n",
+    "    A = P_1*(N0*0+N1*5./24+N2*1./8)+P0*(N0/6+N1*0+N2/6)+P1*(N0*0+N1*5./24+N2*1./8)\n",
     "    return A\n",
     "\n",
     "# Same for sigma-\n",
-    "def Asm(P_1,P0,P1):\n",
+    "def Asm(P_1, P0, P1):\n",
     "    A=P1*(N0*1./6+N1*5./24+N2*1./24)+P0*(N0*0+N1*5./24+N2/8)+P_1*N2/4\n",
     "    return A\n",
     "\n",
     "# Total absorption for light whose is split between polarization components:  π : 0.5,  σ+ :0.25,  σ− :0.25\n",
-    "def A(P_1,P0,P1):\n",
+    "def A(P_1, P0, P1):\n",
     "    return 0.5*Api(P_1,P0,P1)+0.25*Asp(P_1,P0,P1)+0.25*Asm(P_1,P0,P1)"
    ],
    "metadata": {
@@ -269,9 +271,9 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# Plot tansmission for sigma+ polarization\n",
-    "alpha_p=Asp(ss_1,ss0,ss1)\n",
-    "Tsigma=1-alpha_p\n",
+    "# Plot transmission for sigma+ polarization\n",
+    "alpha_p = Asp(ss_1,ss0,ss1)\n",
+    "Tsigma = 1-alpha_p\n",
     "fig, ax = plt.subplots()\n",
     "ax.plot(delta/w_L, Tsigma,label=r'$-1$')\n",
     "ax.set_xlabel(r'$\\delta/w_L$',fontsize=12)\n",
@@ -313,8 +315,8 @@
    ],
    "source": [
     "# Plot transmission for the mixed polarization\n",
-    "alpha_mixed=A(ss_1,ss0,ss1)\n",
-    "Tmixed=1-alpha_mixed\n",
+    "alpha_mixed = A(ss_1,ss0,ss1)\n",
+    "Tmixed = 1-alpha_mixed\n",
     "fig, ax = plt.subplots()\n",
     "ax.plot(delta/w_L,Tmixed,label=r'$-1$')\n",
     "ax.set_xlabel(r'$\\delta/w_L$',fontsize=12)\n",
