added comments to the Hamiltonian functions

--- a/maop_steady-state.ipynb
+++ b/maop_steady-state.ipynb
@@ -85,13 +85,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "# Hamiltonian\n",
     "\n",
-    "S_o = W * np.array([0.5*np.sqrt(3),  0.25*np.sqrt(2), 0.25*np.sqrt(6), 0.25*np.sqrt(6), 0.25*np.sqrt(2),  0.5*np.sqrt(3)])# Rabi frequencies for sigma transition\n",
-    "S_l = W * np.array([0.5*np.sqrt(3), 1, 0.5*np.sqrt(3)]) # Rabi frequencies for pi transitions\n",
+    "# Coupling strengths for the sigma transition based on the transition strength\n",
+    "S_o = W * np.array([0.5*np.sqrt(3),  0.25*np.sqrt(2), 0.25*np.sqrt(6), 0.25*np.sqrt(6), 0.25*np.sqrt(2),  0.5*np.sqrt(3)])\n",
+    "\n",
+    "# Coupling strengths for the pi transition based on the transition strength\n",
+    "S_l = W * np.array([0.5*np.sqrt(3), 1, 0.5*np.sqrt(3)])\n",
     "\n",
     "def L(f, g):\n",
     "    \"\"\"Cavity line-width\"\"\"\n",
@@ -100,27 +103,29 @@
     "    return g**2/(g**2+f**2)\n",
     "\n",
     "def So(W_par, W_ort):\n",
+    "    \"\"\"Coupling strength for sigma transitions with cavity\"\"\"\n",
     "    wL = np.sqrt(W_par**2+W_ort**2)\n",
     "    if wL == 0:\n",
-    "        return 0*S_o*np.sqrt(L(np.array([-3,-1,-1,1,1,3])*wL,gL))\n",
-    "    return S_o*W_ort/wL*np.sqrt(L(np.array([-3,-1,-1,1,1,3])*wL,gL))\n",
+    "        return 0 # To avoid double counting in the degenerate case\n",
+    "    return S_o * W_ort/wL * np.sqrt(L(np.array([-3,-1,-1,1,1,3])*wL,gL))\n",
     "\n",
     "def Sl(W_par, W_ort):\n",
-    "    \"\"\"Pi-transition\"\"\"\n",
+    "    \"\"\"Coupling strength for pi transitions with cavity\n",
+    "    \"\"\"\n",
     "    wL = np.sqrt(W_par**2+W_ort**2)\n",
     "    if wL == 0:\n",
     "        return S_l * np.sqrt(L(np.array([-2, 0, 2])*wL,gL))\n",
     "    return S_l * W_par/wL * np.sqrt(L(np.array([-2, 0, 2])*wL,gL))\n",
     "\n",
     "def V(W_par, W_ort):\n",
-    "    \"\"\"Interaction part of the Hamiltonian as a function of Larmor frequency\"\"\"\n",
+    "    \"\"\"Interaction part of the Hamiltonian as a function of the Larmor frequency\"\"\"\n",
     "    V_l = 0*qeye(len(states))\n",
     "    V_o = 0*qeye(len(states))\n",
     "\n",
     "    for i in range(3):\n",
-    "        V_l += 0.5*Sl(W_par,W_ort)[i]*(states[i]*states[i+4].dag())+0.5*Sl(W_par,W_ort)[i]*(states[i]*states[i+4].dag()).dag()#pi transition\n",
-    "        V_o += 0.5*So(W_par,W_ort)[2*i]*(states[i]*states[i+3].dag())+0.5*So(W_par,W_ort)[2*i]*(states[i]*states[i+3].dag()).dag()#sigma-\n",
-    "        V_o += 0.5*So(W_par,W_ort)[2*i+1]*(states[i]*states[i+5].dag())+0.5*So(W_par,W_ort)[2*i+1]*(states[i]*states[i+5].dag()).dag()#sigma+\n",
+    "        V_l += 0.5*Sl(W_par,W_ort)[i]*(states[i]*states[i+4].dag())+0.5*Sl(W_par,W_ort)[i]*(states[i]*states[i+4].dag()).dag() # Pi transition\n",
+    "        V_o += 0.5*So(W_par,W_ort)[2*i]*(states[i]*states[i+3].dag())+0.5*So(W_par,W_ort)[2*i]*(states[i]*states[i+3].dag()).dag() # Sigma- transitions\n",
+    "        V_o += 0.5*So(W_par,W_ort)[2*i+1]*(states[i]*states[i+5].dag())+0.5*So(W_par,W_ort)[2*i+1]*(states[i]*states[i+5].dag()).dag() # Sigma+ transition\n",
     "    return V_o+V_l\n",
     "\n",
     "def H_d(d, wL):\n",
