Added equation for the diagonal part

--- a/maop_steady-state.ipynb
+++ b/maop_steady-state.ipynb
@@ -60,6 +60,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Relaxation"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "outputs": [],
@@ -84,12 +93,30 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Hmiltonian\n",
+    "\n",
+    "The Hamiltonian is given in the rotating-wave approximation"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Interaction Hamiltonian (off-diagonal)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "outputs": [],
    "source": [
-    "# Hamiltonian\n",
-    "\n",
     "# Coupling strengths for the sigma transition based on the transition strength\n",
     "S_o = W * np.array([0.5*np.sqrt(3),  0.25*np.sqrt(2), 0.25*np.sqrt(6), 0.25*np.sqrt(6), 0.25*np.sqrt(2),  0.5*np.sqrt(3)])\n",
     "\n",
@@ -126,8 +153,36 @@
     "        V_l += 0.5*Sl(W_par,W_ort)[i]*(states[i]*states[i+4].dag())+0.5*Sl(W_par,W_ort)[i]*(states[i]*states[i+4].dag()).dag() # Pi transition\n",
     "        V_o += 0.5*So(W_par,W_ort)[2*i]*(states[i]*states[i+3].dag())+0.5*So(W_par,W_ort)[2*i]*(states[i]*states[i+3].dag()).dag() # Sigma- transitions\n",
     "        V_o += 0.5*So(W_par,W_ort)[2*i+1]*(states[i]*states[i+5].dag())+0.5*So(W_par,W_ort)[2*i+1]*(states[i]*states[i+5].dag()).dag() # Sigma+ transition\n",
-    "    return V_o+V_l\n",
-    "\n",
+    "    return V_o+V_l"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Diagonal part"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Given by\n",
+    "$$\\hat{H}_0 = \\hbar\\sum_{m_F}\\left(\\dfrac{\\delta}{2}-m_{\\rm F}\\omega_{\\rm L}\\right)| F=1,m_{\\rm F}\\rangle\\langle F=1,m_{\\rm F}|+\\hbar\\sum_{\\widetilde{m}_{\\rm F}}\\left(\\widetilde{m}_{\\rm F}\\omega_{\\rm L}-\\dfrac{\\delta}{2}\\right)|F=2,\\widetilde{m}_{\\rm F}\\rangle\\langle F=2,\\widetilde{m}_{\\rm F}|,$$"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "def H_d(d, wL):\n",
     "    \"\"\"Diagonal part of the Hamiltonian as a function of detuning d form the clock transition and the Larmor frequency\"\"\"\n",
     "    H = 0*qeye(len(states))\n",
@@ -139,9 +194,26 @@
     "    H += -0.5*d*P[5]\n",
     "    H += -(0.5*d-wL)*P[6]\n",
     "    H += -(0.5*d-2*wL)*P[7]\n",
-    "    return H\n",
-    "\n",
-    "'''Total Hamiltonian'''\n",
+    "    return H"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Total Hamiltonian"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [],
+   "source": [
     "def H(d, W_par, W_ort):\n",
     "    wL = np.sqrt(W_par**2+W_ort**2)\n",
     "    H = H_d(d,wL)+V(W_par,W_ort)\n",
@@ -152,12 +224,19 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Finding steady state"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "outputs": [],
    "source": [
-    "# Find the steady state\n",
-    "\n",
     "W_par = 0 # Parallel component of the microwave field in terms of Rabi frequency\n",
     "W_ort = 1 # Orthogonal component of the microwave field in terms of Rabi frequency\n",
     "\n",
