rewrote the Hamiltonian in terms of theta

--- a/maop_steady-state.ipynb
+++ b/maop_steady-state.ipynb
@@ -64,8 +64,12 @@
    "source": [
     "# Relaxation\n",
     "\n",
-    "We model the optical pumping as relaxation from F=2 to F=1 at the same rate for all sublevels:\n",
-    "$$ $$"
+    "We model the optical pumping as relaxation from F=2 to F=1 at the same rate for all sublevels. The process is described by the following collapse operator:\n",
+    "$$    \\hat{L}_{\\rm OP}(m_{\\rm F},\\widetilde{m}_{\\rm F})=\\sqrt{\\Gamma_{\\rm OP}}|F=1,m_{\\rm F}\\rangle\\langle F=2,\\widetilde{m}_{\\rm F}|. $$\n",
+    "\n",
+    "For the thermal relaxation, we assume that each Zeeman sublevel mixes with every other sublevel at the same rate:\n",
+    "$$     \\hat{L}_{\\rm}=\\sqrt{\\Gamma_{\\rm th}}|i\\rangle \\langle j|,$$\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false
@@ -161,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "outputs": [],
    "source": [
     "def L(f, g):\n",
@@ -170,27 +174,30 @@
     "        return 1 # For simplicity, I set this condition fot the case when there is no cavity\n",
     "    return g**2/(g**2+f**2)\n",
     "\n",
-    "def So(W_ort, wL):\n",
+    "def So(W_R, theta, wL):\n",
     "    \"\"\"Coupling strength for sigma transitions with cavity\"\"\"\n",
     "    transition_strength = np.array([0.5*np.sqrt(3),  0.25*np.sqrt(2), 0.25*np.sqrt(6), 0.25*np.sqrt(6), 0.25*np.sqrt(2),  0.5*np.sqrt(3)])\n",
     "    if wL == 0:\n",
     "        return 0 # To avoid double counting in the degenerate case\n",
-    "    return transition_strength * W_ort * np.sqrt(L(np.array([-3,-1,-1,1,1,3])*wL,gL))\n",
+    "    return transition_strength * W_R * np.sin(theta) * np.sqrt(L(np.array([-3,-1,-1,1,1,3])*wL,gL))\n",
     "\n",
-    "def Sl(W_par, wL):\n",
+    "def Sl(W_R, theta, wL):\n",
     "    \"\"\"Coupling strength for pi transitions with cavity\"\"\"\n",
     "    transition_strength = np.array([0.5*np.sqrt(3), 1, 0.5*np.sqrt(3)])\n",
-    "    return transition_strength * W_par * np.sqrt(L(np.array([-2, 0, 2])*wL,gL))\n",
+    "    return transition_strength * W_R * np.cos(theta) * np.sqrt(L(np.array([-2, 0, 2])*wL,gL))\n",
     "\n",
-    "def V(W_par, W_ort, wL):\n",
+    "def V(W_R, theta, wL):\n",
     "    \"\"\"Interaction part of the Hamiltonian as a function of the Larmor frequency\"\"\"\n",
     "    V_l = 0*qeye(len(states))\n",
     "    V_o = 0*qeye(len(states))\n",
     "\n",
+    "    W_par = W_R * np.cos(theta)\n",
+    "    W_ort = W_R * np.sin(theta)\n",
+    "\n",
     "    for i in range(3):\n",
-    "        V_l += 0.5*Sl(W_par, wL)[i]*(states[i]*states[i+4].dag())+0.5*Sl(W_par, wL)[i]*(states[i]*states[i+4].dag()).dag() # Pi transition\n",
-    "        V_o += 0.5*So(W_ort, wL)[2*i]*(states[i]*states[i+3].dag())+0.5*So(W_ort, wL)[2*i]*(states[i]*states[i+3].dag()).dag() # Sigma- transitions\n",
-    "        V_o += 0.5*So(W_ort, wL)[2*i+1]*(states[i]*states[i+5].dag())+0.5*So(W_ort, wL)[2*i+1]*(states[i]*states[i+5].dag()).dag() # Sigma+ transition\n",
+    "        V_l += 0.5*Sl(W_R, theta, wL)[i]*(states[i]*states[i+4].dag())+0.5*Sl(W_R, theta, wL)[i]*(states[i]*states[i+4].dag()).dag() # Pi transition\n",
+    "        V_o += 0.5*So(W_R, theta, wL)[2*i]*(states[i]*states[i+3].dag())+0.5*So(W_R, theta, wL)[2*i]*(states[i]*states[i+3].dag()).dag() # Sigma- transitions\n",
+    "        V_o += 0.5*So(W_R, theta, wL)[2*i+1]*(states[i]*states[i+5].dag())+0.5*So(W_R, theta, wL)[2*i+1]*(states[i]*states[i+5].dag()).dag() # Sigma+ transition\n",
     "    return V_o+V_l\n",
     "\n"
    ],
@@ -209,12 +216,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "outputs": [],
    "source": [
-    "def H(d, W_par, W_ort, wL):\n",
-    "    H = H_d(d, wL)+V(W_par, W_ort, wL)\n",
-    "    return H"
+    "def H(d, W_R, theta, wL):\n",
+    "    return H_d(d, wL) + V(W_R, theta, wL)"
    ],
    "metadata": {
     "collapsed": false
@@ -231,17 +237,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "outputs": [],
    "source": [
-    "W_par = 0 # Parallel component of the microwave field in terms of Rabi frequency\n",
-    "W_ort = W_R # Orthogonal component of the microwave field in terms of Rabi frequency\n",
+    "theta = np.pi * 0.5\n",
     "\n",
     "ss_1 = [] # Steady-state population in F=1, mF=-1\n",
     "ss0 = [] # Steady-state population in F=1, mF=0\n",
     "ss1 = [] # Steady-state population in F=1, mF=1\n",
     "for d in delta:\n",
-    "    ss = steadystate(H(d,W_par,W_ort, w_L), c_ops, drop_tol=1e-10) #steady state\n",
+    "    ss = steadystate(H(d, W_R, theta, w_L), c_ops, drop_tol=1e-10) #steady state\n",
     "    ss_1.append(expect(P[0], ss)) # Steady-state populations of psi1\n",
     "    ss0.append(expect(P[1], ss)) # Steady-state populations of psi2\n",
     "    ss1.append(expect(P[2], ss)) # Steady-state populations of psi3\n",
@@ -256,13 +261,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 49,
    "outputs": [
     {
      "data": {
       "text/plain": "Text(0, 0.5, 'Population')"
      },
-     "execution_count": 34,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
