--- a/maop_steady-state.ipynb
+++ b/maop_steady-state.ipynb
@@ -122,8 +122,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Given by\n",
-    "$$\\hat{H}_0 = \\hbar\\sum_{m_F}\\left(\\dfrac{\\delta}{2}-m_{\\rm F}\\omega_{\\rm L}\\right)| F=1,m_{\\rm F}\\rangle\\langle F=1,m_{\\rm F}|+\\hbar\\sum_{\\widetilde{m}_{\\rm F}}\\left(\\widetilde{m}_{\\rm F}\\omega_{\\rm L}-\\dfrac{\\delta}{2}\\right)|F=2,\\widetilde{m}_{\\rm F}\\rangle\\langle F=2,\\widetilde{m}_{\\rm F}|,$$"
+    "The diagonal part of the Hamiltonian is given by\n",
+    "$$\\hat{H}_0 = \\hbar\\sum_{m_F}\\left(\\dfrac{\\delta}{2}-m_{\\rm F}\\omega_{\\rm L}\\right)| F=1,m_{\\rm F}\\rangle\\langle F=1,m_{\\rm F}|+\\hbar\\sum_{\\widetilde{m}_{\\rm F}}\\left(\\widetilde{m}_{\\rm F}\\omega_{\\rm L}-\\dfrac{\\delta}{2}\\right)|F=2,\\widetilde{m}_{\\rm F}\\rangle\\langle F=2,\\widetilde{m}_{\\rm F}|,$$\n",
+    "\n",
+    "where $\\delta$ is the microave detuning from the clock transition, and $\\omega_L$ is the Larmor frequency."
    ],
    "metadata": {
     "collapsed": false
@@ -156,8 +158,15 @@
    "source": [
     "## Interaction Hamiltonian (off-diagonal)\n",
     "\n",
-    "Given by\n",
-    "$$\\hat{V}=\\dfrac{\\hbar}{2}\\sum_{\\widetilde{m}_{\\rm F}}\\sum_{m_{\\rm F}}\\Omega_{m_{\\rm F},\\widetilde{m}_{\\rm F}}|F=1,m_{\\rm F}\\rangle\\langle F=2,\\widetilde{m}_{\\rm F}|+ {\\rm h.c.},$$"
+    "The interacion Hamiltonian is given by\n",
+    "\n",
+    "$$\\hat{V}=\\dfrac{\\hbar}{2}\\sum_{\\widetilde{m}_{\\rm F}}\\sum_{m_{\\rm F}}\\Omega_{m_{\\rm F},\\widetilde{m}_{\\rm F}}|F=1,m_{\\rm F}\\rangle\\langle F=2,\\widetilde{m}_{\\rm F}|+ {\\rm h.c.}.$$\n",
+    "\n",
+    "For the $\\pi$-transitions, the coupling strength is given by\n",
+    "$$\\Omega_{m_{\\rm F}m_{\\rm F}}=\\Omega_{0}\\cos\\theta S_{m_{\\rm F}m_{\\rm F}}\\sqrt{L(\\delta_{m_{\\rm F}m_{\\rm F}})}$$,\n",
+    "where $\\Omega_0$ is the full Rabi frequency,  $\\theta$ is the angle between the microwave field and the DC field, S is the transition strength ('Sl' in the code), and $L$ is the cavity line profile.\n",
+    "\n",
+    "For the $\\sigma$-transitions, the expression is the same, except $\\cos\\theta$ is replaced with $\\sin\\theta$.\n"
    ],
    "metadata": {
     "collapsed": false
@@ -198,8 +207,7 @@
     "        V_l += 0.5*Sl(W_R, theta, wL)[i]*(states[i]*states[i+4].dag())+0.5*Sl(W_R, theta, wL)[i]*(states[i]*states[i+4].dag()).dag() # Pi transition\n",
     "        V_o += 0.5*So(W_R, theta, wL)[2*i]*(states[i]*states[i+3].dag())+0.5*So(W_R, theta, wL)[2*i]*(states[i]*states[i+3].dag()).dag() # Sigma- transitions\n",
     "        V_o += 0.5*So(W_R, theta, wL)[2*i+1]*(states[i]*states[i+5].dag())+0.5*So(W_R, theta, wL)[2*i+1]*(states[i]*states[i+5].dag()).dag() # Sigma+ transition\n",
-    "    return V_o+V_l\n",
-    "\n"
+    "    return V_o+V_l"
    ],
    "metadata": {
     "collapsed": false
@@ -229,7 +237,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Finding steady state"
+    "# Finding steady state\n",
+    "\n",
+    "We find the steady-state population by solving the Lindblad equation\n",
+    "$$    \\dfrac{d}{dt}\\hat{\\rho}=-\\dfrac{i}{\\hbar}\\left[\\hat{H},\\hat{\\rho}\\right]+\\dfrac{1}{2}\\sum_{n} \\left(2\\hat{L}_n\\hat{\\rho} \\hat{L}_n^{\\dagger}-\\hat{\\rho}\\hat{L}_n^{\\dagger}\\hat{L}_n-\\hat{L}_n^{\\dagger}\\hat{L}_n\\hat{\\rho}\\right).$$"
    ],
    "metadata": {
     "collapsed": false
